Fix alignment issues with LCA

--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -41,7 +41,7 @@ auto-save-form {
     flex: 1 1 50%;
     margin: 0;
     max-width: 50%;
-    padding: 0 16px 16px 28px;
+    padding: 0 16px 20px 28px;
     position: relative;
     flex-wrap: wrap;
     display: flex;
