--- a/src/ggrc/assets/stylesheets/modules/_assessment.scss
+++ b/src/ggrc/assets/stylesheets/modules/_assessment.scss
@@ -49,7 +49,7 @@
       padding: 0 16px 0 28px;
       flex: 1 1 50%;
       max-width: 50%;
-      margin: 0 0 16px;
+      margin: 0 0 10px;
     }
   }
 }
